[package]
name = "stentorian"
version = "0.1.0"
authors = ["Daniël Louwrink <daniel.louwrink@gmail.com>"]

[target.i686-pc-windows-msvc.dependencies]
components = "0.1"
byteorder = "1.2"
bitflags = "1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
failure_derive = "0.1"

log = "0.4"
